pkg/ibmvpc/examples/tgw_larger_example_all_vpcssubnetsBased_withPGW.txt
Connectivity between VPCs connected by TGW local-tg-ky (UID: crn:578)
combined connections between subnets:
subnet11-ky => subnet21-ky : All Connections
subnet12-ky => subnet21-ky : All Connections
subnet21-ky => subnet11-ky : All Connections
subnet21-ky => subnet12-ky : All Connections
subnet21-ky => subnet31-ky : All Connections
subnet21-ky => subnet32-ky : All Connections
subnet31-ky => subnet11-ky : All Connections *
subnet31-ky => subnet12-ky : All Connections *
subnet31-ky => subnet21-ky : All Connections
subnet32-ky => subnet21-ky : All Connections

connections are stateful unless marked with *

Connectivity between VPCs connected by TGW local-tg-zn (UID: crn:574)
combined connections between subnets:
zn-vpc1-net1 => zn-vpc2-net1 : All Connections
zn-vpc2-net1 => zn-vpc1-net1 : All Connections

connections are stateful unless marked with *

Connectivity for VPC test-vpc0-ky
combined connections between subnets:
subnet1-ky => Public Internet 172.217.22.46/32 : All Connections
subnet1-ky => subnet3-ky : protocol: TCP src-ports: 1-442,444-65535 dst-ports: 443; protocol: TCP src-ports: 443
subnet2-ky => Public Internet (all ranges) : All Connections
subnet3-ky => subnet1-ky : protocol: TCP src-ports: 1-442,444-65535 dst-ports: 443; protocol: TCP src-ports: 443

connections are stateful unless marked with *

Connectivity for VPC test-vpc1-ky
combined connections between subnets:
subnet11-ky => subnet12-ky : All Connections
subnet12-ky => subnet11-ky : All Connections

connections are stateful unless marked with *

Connectivity for VPC test-vpc2-ky
combined connections between subnets:


connections are stateful unless marked with *

Connectivity for VPC test-vpc3-ky
combined connections between subnets:
subnet31-ky => subnet32-ky : All Connections
subnet32-ky => subnet31-ky : All Connections

connections are stateful unless marked with *

Connectivity for VPC zn-vpc1
combined connections between subnets:


connections are stateful unless marked with *

Connectivity for VPC zn-vpc2
combined connections between subnets:


connections are stateful unless marked with *
